# sniper

./: .git-FETCH_HEAD  .git-config  .git-index  .git-logs-refs-remotes-origin-HEAD  .git-packed-refs  .git-refs-heads-main  .gitignore  CHANGELOG.md  README.md  build.sh  install.sh  sniper.txt
config/: sniper-config.json
tools/sniper-project-init/: .gitignore  README.md  pyproject.toml
tools/sniper-project-init/project_init/: __init__.py  cli.py  config.py  core.py  interactive.py  licenses.py  utils.py
tools/sniper-project-init/templates/c-project/: Makefile  sniper.json
tools/sniper-project-init/templates/c-project/include/: greeter.h
tools/sniper-project-init/templates/c-project/src/: greeter.c  main.c
tools/sniper-project-init/templates/cpp-project/: Makefile  sniper.json
tools/sniper-project-init/templates/django-project/: .gitignore  Dockerfile  sniper.json
tools/sniper-project-init/templates/express-api/: .gitignore  Dockerfile  package.json  sniper.json
tools/sniper-project-init/templates/flask-api/: .gitignore  Dockerfile  docker-compose.yml  sniper.json
tools/sniper-project-init/templates/generic/: README.md
tools/sniper-project-init/templates/go-cli/: .gitignore  Dockerfile  sniper.json
tools/sniper-project-init/templates/nextjs-app-router/: Dockerfile  sniper.json
tools/sniper-project-init/templates/nodejs/: README.md
tools/sniper-project-init/templates/python/: Dockerfile  LICENSE
tools/sniper-project-init/templates/react-ts-vite/: Dockerfile  sniper.json
tools/sniper-project-init/templates/web-static/: index.html  sniper.json
(+195 files in other folders)
